week_03: gateway-demo by netty.

--- a/Week_03/gateway-demo/src/main/resources/application.yml
+++ b/Week_03/gateway-demo/src/main/resources/application.yml
@@ -8,8 +8,8 @@ gateway:
 
   routes:
     -
-      path: /benchmark
+      path: demo
       urls:
         - 127.0.0.1:25030
-        - 127.0.0.1:25031
-        - 127.0.0.1:25032
+        # - 127.0.0.1:25031
+        # - 127.0.0.1:25032
